[package]
name = "workload-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
histogram = "0.6"
libc = "0.2"
nix = "0.27"
crossbeam = "0.8"
num_cpus = "1.16"

[dependencies.uuid]
version = "1.0"
features = ["serde"]
